# Computery

./: Cargo.toml  README.md  shader.glsl  shader2.glsl  test.lua
examples/nbody/: clear.glsl  dots.glsl  init_particles.glsl  nbody.glsl  nbody.lua
examples/slime/: clear_trails.glsl  copy_trails.glsl  diffusion.glsl  particles_init.glsl  render_trails.glsl  slime.glsl  slime.lua
src/: main.rs  shader.frag  shader.vert
