[package]
name = "Computery"
version = "0.1.0"
authors = ["felix <felixbridault@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "^0.7.1"
winit = "*"
env_logger = "*"
pollster = "*"
shaderc = "^0.7.2"
spirv_cross = "*"
rlua = "*"
itertools = "*"